proyectos/proyecto2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: so1-proyecto2
spec: {}
status: {}
