proyectos/proyecto2/k8s/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-producer
  name: grpc-producer
  namespace: so1-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-producer
  strategy: {}
  template:
    metadata:
      labels:
        app: grpc-producer
    spec:
      containers:
        - name: grpc-client
          image: damianpeaf/so1-proyecto2-grpc-client:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.2"
              memory: "128Mi"
        - name: grpc-server
          image: damianpeaf/so1-proyecto2-grpc-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-producer
  name: grpc-producer-svc
  namespace: so1-proyecto2
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grpc-producer
status:
  loadBalancer: {}
