proyectos/proyecto2/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: so1-proyecto2
  labels:
    app: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc-lb
  namespace: so1-proyecto2
spec:
  type: LoadBalancer
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc-clusterip
  namespace: so1-proyecto2
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
