proyectos/proyecto2/k8s/rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rust-producer
  name: rust-producer
  namespace: so1-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-producer
  strategy: {}
  template:
    metadata:
      labels:
        app: rust-producer
    spec:
      containers:
        - name: rust-client
          image: damianpeaf/so1-proyecto2-rust-client
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.2"
              memory: "128Mi"
        - name: rust-server
          image: damianpeaf/so1-proyecto2-rust-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "0.2"
              memory: "128Mi"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rust-producer
  name: rust-producer-svc
  namespace: so1-proyecto2
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: rust-producer
status:
  loadBalancer: {}
